readme update for aspire run